# smartFridge

./: .gitignore  CMakeLists.txt  README.md
Documentazione doxygen/: carica__file_8h_source.html  controlli_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  elaborazione__ricette_8h.html  files.html  gestione__utenti_8c.html  gestione__utenti_8h_source.html  globals.html  globals_enum.html  globals_eval.html  globals_func_c.html  globals_func_q.html  globals_i.html  globals_l.html  globals_n.html  globals_p.html  index.html  pages.html  structdata.html  structpasto.html  structutente.html
Documentazione doxygen/search/: all_0.js  all_1.js  all_10.js  all_6.js  all_9.js  all_b.js  classes_3.js  defines_3.js  defines_5.html  enumvalues_1.js  files_0.js  functions_3.js  functions_4.js  functions_9.js  variables_0.js  variables_1.js
doc/Documentazione doxygen/: annotated.html  carica__file_8h.html  controlli_8h.html  date_8h.html  elaborazione__alimenti_8h.html  elaborazione__alimenti_8h_source.html  elaborazione__ricette_8c.html  elaborazione__ricette_8h_source.html  functions.html  gestione__menu__settimanale_8h.html  gestione__utenti_8h.html  globals_d.html  globals_e.html  globals_func_g.html  globals_func_i.html  globals_func_m.html  globals_func_r.html  globals_m.html  globals_q.html  globals_r.html  globals_s.html  menudata.js  strutture__dati_8h_source.html
docs/: bug.html  carica__file_8c.html  classes.html  controlli_8c.html  date_8c.html  date_8h_source.html  elaborazione__alimenti_8c.html  functions_vars.html  gestione__menu__settimanale_8c.html  gestione__menu__settimanale_8h_source.html  globals_b.html  globals_c.html  globals_defs.html  globals_func.html  globals_func_e.html  globals_func_p.html  globals_func_s.html  globals_func_v.html  globals_g.html  globals_v.html  jquery.js  lista__spesa_8c.html  lista__spesa_8h.html  lista__spesa_8h_source.html  main_8c.html  structalimento.html  structingrediente.html  structmenu__giornaliero.html  structricetta.html  strutture__dati_8h.html
docs/search/: all_11.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_c.js  all_d.js  all_e.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_4.js  defines_6.html  defines_6.js  enumvalues_2.js  files_2.js  files_3.js  functions_1.js  functions_2.js  functions_5.js  pages_0.js  searchdata.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_b.js  variables_c.js
files/: lista_spesa.txt
include/smartfridge/: carica_file.h  controlli.h  elaborazione_ricette.h  gestione_utenti.h  lista_spesa.h
lib/smartfridge/: carica_file.c  controlli.c  date.c  elaborazione_alimenti.c  elaborazione_ricette.c  gestione_menu_settimanale.c  gestione_utenti.c  lista_spesa.c
murro_tartarelli_smart_fridge/: .project  lista_spesa.txt  murro_tartarelli_smart_fridge.doxyfile
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt  inizializza_vettori.c  inizializza_vettori.h  test.c
test_cunit/: .cproject  .project
test_cunit/src/: controlli.c  (+13 more)
(+29 files in other folders)
